// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<SelectMultiple> Snapshots and structure should render chips 1`] = `
<div
  className="lumx-select lumx-select--has-multiple lumx-select lumx-select--is-empty lumx-select--theme-light"
>
  <SelectMultipleField
    anchorRef={
      Object {
        "current": null,
      }
    }
    handleKeyboardNav={[Function]}
    isEmpty={true}
    selectedChipRender={[Function]}
    selectedValueRender={[Function]}
    targetUuid="uuid"
    theme="light"
    value={Array []}
    variant="chip"
  />
  <Dropdown
    anchorRef={
      Object {
        "current": null,
      }
    }
    closeOnClick={false}
    closeOnClickAway={true}
    closeOnEscape={true}
    fitToAnchorWidth={true}
    fitWithinViewportHeight={true}
    onClose={[Function]}
    placement="bottom-start"
    shouldFocusOnOpen={true}
  >
    <span>
      Select Component
    </span>
  </Dropdown>
</div>
`;

exports[`<SelectMultiple> Snapshots and structure should render defaults 1`] = `
<div
  className="lumx-select lumx-select--has-multiple lumx-select lumx-select--is-empty lumx-select--theme-light"
>
  <SelectMultipleField
    anchorRef={
      Object {
        "current": null,
      }
    }
    handleKeyboardNav={[Function]}
    isEmpty={true}
    selectedChipRender={[Function]}
    selectedValueRender={[Function]}
    targetUuid="uuid"
    theme="light"
    value={Array []}
    variant="input"
  />
  <Dropdown
    anchorRef={
      Object {
        "current": null,
      }
    }
    closeOnClick={false}
    closeOnClickAway={true}
    closeOnEscape={true}
    fitToAnchorWidth={true}
    fitWithinViewportHeight={true}
    onClose={[Function]}
    placement="bottom-start"
    shouldFocusOnOpen={true}
  >
    <span>
      Select Component
    </span>
  </Dropdown>
</div>
`;
